# embassy-stm32-plus

./: .gitignore  Cargo.toml  Readme.md
src/: lib.rs
src/stm32c0/: mod.rs
src/stm32f1/: mod.rs
src/stm32f1/stm32f100/: mod.rs
src/stm32f1/stm32f100/stm32f100__/: eth.rs
src/stm32f1/stm32f100/stm32f100c6/: gpio.rs
src/stm32f1/stm32f100/stm32f100r4/: uart.rs
src/stm32f1/stm32f100/stm32f100r8/: spi.rs
src/stm32f1/stm32f101/: mod.rs
src/stm32f1/stm32f101/stm32f101__/: eth.rs
src/stm32f1/stm32f101/stm32f101c8/: gpio.rs
src/stm32f1/stm32f101/stm32f101cb/: uart.rs
src/stm32f1/stm32f101/stm32f101re/: gpio.rs
src/stm32f1/stm32f101/stm32f101rf/: uart.rs
src/stm32f1/stm32f101/stm32f101t4/: i2c.rs  uart.rs
src/stm32f1/stm32f101/stm32f101t6/: mod.rs
src/stm32f1/stm32f101/stm32f101vg/: spi.rs
src/stm32f1/stm32f101/stm32f101zg/: adc.rs  uart.rs
src/stm32f1/stm32f102/: mod.rs
src/stm32f1/stm32f102/stm32f102__/: eth.rs  usb.rs
src/stm32f1/stm32f102/stm32f102c4/: spi.rs
src/stm32f1/stm32f102/stm32f102c6/: i2c.rs
src/stm32f1/stm32f102/stm32f102r8/: i2c.rs
src/stm32f1/stm32f103/: mod.rs
src/stm32f1/stm32f103/stm32f103__/: adc.rs  eth.rs  gpio.rs  mod.rs
src/stm32f1/stm32f103/stm32f103__/i2c/: i2c1.rs  i2c2.rs  mod.rs
src/stm32f1/stm32f103/stm32f103__/spi/: spi1.rs  spi2.rs  spi3.rs
src/stm32f1/stm32f103/stm32f103__/uart/: mod.rs  uart1.rs  uart2.rs  uart3.rs
src/stm32f1/stm32f103/stm32f103c4/: i2c.rs
src/stm32f1/stm32f103/stm32f103c6/: uart.rs
src/stm32f1/stm32f103/stm32f103r4/: spi.rs
src/stm32f1/stm32f103/stm32f103r6/: gpio.rs  i2c.rs
src/stm32f1/stm32f103/stm32f103r8/: i2c.rs
src/stm32f1/stm32f103/stm32f103rc/: uart.rs
src/stm32f1/stm32f103/stm32f103rc/uart/: mod.rs  uart1.rs  uart2.rs  uart3.rs
src/stm32f1/stm32f103/stm32f103re/: can.rs  i2c.rs
src/stm32f1/stm32f103/stm32f103t6/: uart.rs
src/stm32f1/stm32f103/stm32f103t8/: can.rs  gpio.rs  i2c.rs  mod.rs  uart.rs
src/stm32f1/stm32f103/stm32f103vb/: spi.rs
src/stm32f1/stm32f103/stm32f103vd/: adc.rs
src/stm32f1/stm32f103/stm32f103zc/: can.rs  spi.rs  uart.rs
src/stm32f1/stm32f103/stm32f103zf/: gpio.rs
src/stm32f1/stm32f105/: mod.rs
src/stm32f1/stm32f105/stm32f105__/: eth.rs  usb.rs
src/stm32f1/stm32f105/stm32f105r8/: adc.rs  mod.rs
src/stm32f1/stm32f105/stm32f105rc/: can.rs
src/stm32f1/stm32f105/stm32f105vb/: can.rs
src/stm32f1/stm32f105/stm32f105vc/: mod.rs
src/stm32f1/stm32f107/: mod.rs
src/stm32f1/stm32f107/stm32f107__/: eth.rs
src/stm32f1/stm32f1__/: can.rs  gpio.rs
src/stm32f1/stm32f1__/can/: can0.rs  can1.rs  can2.rs  mod.rs
src/stm32f1/stm32f1__/i2c/: i2c1.rs  i2c2.rs
src/stm32f1/stm32f1__/spi/: mod.rs  spi1.rs  spi2.rs  spi3.rs
src/stm32f1/stm32f1__/uart/: uart1.rs  uart2.rs  uart3.rs
src/traits/: mod.rs
src/traits/adc/: mod.rs
src/traits/can/: mod.rs
src/traits/crc/: mod.rs
src/traits/dac/: mod.rs
src/traits/eth/: mod.rs
src/traits/flash/: mod.rs
src/traits/gpio/: input.rs  mod.rs  output.rs
src/traits/i2c/: mod.rs
src/traits/spi/: mod.rs
src/traits/uart/: mod.rs  rx.rs  tx.rs
src/traits/uid/: mod.rs
src/traits/usb/: acm_state.rs  buf.rs  mod.rs  ncm_state.rs  otg.rs  usb_trait.rs
src/traits/wdg/: mod.rs
