[package]
name = "embassy-stm32-plus"
version = "0.1.4"
edition = "2021"
description = "embassy-stm32 plus"
readme = "Readme.md"
authors = ["nobody"]
license = "MIT/Apache-2.0"
categories = ["embedded"]
repository = "https://github.com/lifeRobot/embassy-stm32-plus"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["time-driver-any", "memory-x"], optional = true }
embassy-time = { version = "0.3.2", optional = true }
embedded-hal = { version = "0.2.7", optional = true }
embassy-usb = { version = "0.3.0", optional = true }

[features]
stm32f1 = ["embassy-time", "embedded-hal"]
stm32f100 = ["stm32f1"]
stm32f101 = ["stm32f1"]
stm32f102 = ["stm32f1", "embassy-usb"]
stm32f103 = ["stm32f1", "embassy-usb"]
stm32f105 = ["stm32f1", "embassy-usb"]
stm32f107 = ["stm32f1", "embassy-usb"]
stm32f100c4 = ["stm32f100", "embassy-stm32/stm32f100c4"]
stm32f100c6 = ["stm32f100", "embassy-stm32/stm32f100c6"]
stm32f100c8 = ["stm32f100", "embassy-stm32/stm32f100c8"]
stm32f100cb = ["stm32f100", "embassy-stm32/stm32f100cb"]
stm32f100r4 = ["stm32f100", "embassy-stm32/stm32f100r4"]
stm32f100r6 = ["stm32f100", "embassy-stm32/stm32f100r6"]
stm32f100r8 = ["stm32f100", "embassy-stm32/stm32f100r8"]
stm32f100rb = ["stm32f100", "embassy-stm32/stm32f100rb"]
stm32f100rc = ["stm32f100", "embassy-stm32/stm32f100rc"]
stm32f100rd = ["stm32f100", "embassy-stm32/stm32f100rd"]
stm32f100re = ["stm32f100", "embassy-stm32/stm32f100re"]
stm32f100v8 = ["stm32f100", "embassy-stm32/stm32f100v8"]
stm32f100vb = ["stm32f100", "embassy-stm32/stm32f100vb"]
stm32f100vc = ["stm32f100", "embassy-stm32/stm32f100vc"]
stm32f100vd = ["stm32f100", "embassy-stm32/stm32f100vd"]
stm32f100ve = ["stm32f100", "embassy-stm32/stm32f100ve"]
stm32f100zc = ["stm32f100", "embassy-stm32/stm32f100zc"]
stm32f100zd = ["stm32f100", "embassy-stm32/stm32f100zd"]
stm32f100ze = ["stm32f100", "embassy-stm32/stm32f100ze"]
stm32f101t4 = ["stm32f101", "embassy-stm32/stm32f101t4"]
stm32f101t6 = ["stm32f101", "embassy-stm32/stm32f101t6"]
stm32f101t8 = ["stm32f101", "embassy-stm32/stm32f101t8"]
stm32f101tb = ["stm32f101", "embassy-stm32/stm32f101tb"]
stm32f101c4 = ["stm32f101", "embassy-stm32/stm32f101c4"]
stm32f101c6 = ["stm32f101", "embassy-stm32/stm32f101c6"]
stm32f101c8 = ["stm32f101", "embassy-stm32/stm32f101c8"]
stm32f101cb = ["stm32f101", "embassy-stm32/stm32f101cb"]
stm32f101r4 = ["stm32f101", "embassy-stm32/stm32f101r4"]
stm32f101r6 = ["stm32f101", "embassy-stm32/stm32f101r6"]
stm32f101r8 = ["stm32f101", "embassy-stm32/stm32f101r8"]
stm32f101rb = ["stm32f101", "embassy-stm32/stm32f101rb"]
stm32f101rc = ["stm32f101", "embassy-stm32/stm32f101rc"]
stm32f101rd = ["stm32f101", "embassy-stm32/stm32f101rd"]
stm32f101re = ["stm32f101", "embassy-stm32/stm32f101re"]
stm32f101rf = ["stm32f101", "embassy-stm32/stm32f101rf"]
stm32f101rg = ["stm32f101", "embassy-stm32/stm32f101rg"]
stm32f101v8 = ["stm32f101", "embassy-stm32/stm32f101v8"]
stm32f101vb = ["stm32f101", "embassy-stm32/stm32f101vb"]
stm32f101vc = ["stm32f101", "embassy-stm32/stm32f101vc"]
stm32f101vd = ["stm32f101", "embassy-stm32/stm32f101vd"]
stm32f101ve = ["stm32f101", "embassy-stm32/stm32f101ve"]
stm32f101vf = ["stm32f101", "embassy-stm32/stm32f101vf"]
stm32f101vg = ["stm32f101", "embassy-stm32/stm32f101vg"]
stm32f101zc = ["stm32f101", "embassy-stm32/stm32f101zc"]
stm32f101zd = ["stm32f101", "embassy-stm32/stm32f101zd"]
stm32f101ze = ["stm32f101", "embassy-stm32/stm32f101ze"]
stm32f101zf = ["stm32f101", "embassy-stm32/stm32f101zf"]
stm32f101zg = ["stm32f101", "embassy-stm32/stm32f101zg"]
stm32f102c4 = ["stm32f102", "embassy-stm32/stm32f102c4"]
stm32f102c6 = ["stm32f102", "embassy-stm32/stm32f102c6"]
stm32f102c8 = ["stm32f102", "embassy-stm32/stm32f102c8"]
stm32f102cb = ["stm32f102", "embassy-stm32/stm32f102cb"]
stm32f102r4 = ["stm32f102", "embassy-stm32/stm32f102r4"]
stm32f102r6 = ["stm32f102", "embassy-stm32/stm32f102r6"]
stm32f102r8 = ["stm32f102", "embassy-stm32/stm32f102r8"]
stm32f102rb = ["stm32f102", "embassy-stm32/stm32f102rb"]
stm32f103t4 = ["stm32f103", "embassy-stm32/stm32f103t4"]
stm32f103t6 = ["stm32f103", "embassy-stm32/stm32f103t6"]
stm32f103t8 = ["stm32f103", "embassy-stm32/stm32f103t8"]
stm32f103tb = ["stm32f103", "embassy-stm32/stm32f103tb"]
stm32f103c4 = ["stm32f103", "embassy-stm32/stm32f103c4"]
stm32f103c6 = ["stm32f103", "embassy-stm32/stm32f103c6"]
stm32f103c8 = ["stm32f103", "embassy-stm32/stm32f103c8"]
stm32f103cb = ["stm32f103", "embassy-stm32/stm32f103cb"]
stm32f103r4 = ["stm32f103", "embassy-stm32/stm32f103r4"]
stm32f103r6 = ["stm32f103", "embassy-stm32/stm32f103r6"]
stm32f103r8 = ["stm32f103", "embassy-stm32/stm32f103r8"]
stm32f103rb = ["stm32f103", "embassy-stm32/stm32f103rb"]
stm32f103rc = ["stm32f103", "embassy-stm32/stm32f103rc"]
stm32f103rd = ["stm32f103", "embassy-stm32/stm32f103rd"]
stm32f103re = ["stm32f103", "embassy-stm32/stm32f103re"]
stm32f103rf = ["stm32f103", "embassy-stm32/stm32f103rf"]
stm32f103rg = ["stm32f103", "embassy-stm32/stm32f103rg"]
stm32f103v8 = ["stm32f103", "embassy-stm32/stm32f103v8"]
stm32f103vb = ["stm32f103", "embassy-stm32/stm32f103vb"]
stm32f103vc = ["stm32f103", "embassy-stm32/stm32f103vc"]
stm32f103vd = ["stm32f103", "embassy-stm32/stm32f103vd"]
stm32f103ve = ["stm32f103", "embassy-stm32/stm32f103ve"]
stm32f103vf = ["stm32f103", "embassy-stm32/stm32f103vf"]
stm32f103vg = ["stm32f103", "embassy-stm32/stm32f103vg"]
stm32f103zc = ["stm32f103", "embassy-stm32/stm32f103zc"]
stm32f103zd = ["stm32f103", "embassy-stm32/stm32f103zd"]
stm32f103ze = ["stm32f103", "embassy-stm32/stm32f103ze"]
stm32f103zf = ["stm32f103", "embassy-stm32/stm32f103zf"]
stm32f103zg = ["stm32f103", "embassy-stm32/stm32f103zg"]
stm32f105r8 = ["stm32f105", "embassy-stm32/stm32f105r8"]
stm32f105rb = ["stm32f105", "embassy-stm32/stm32f105rb"]
stm32f105rc = ["stm32f105", "embassy-stm32/stm32f105rc"]
stm32f105v8 = ["stm32f105", "embassy-stm32/stm32f105v8"]
stm32f105vb = ["stm32f105", "embassy-stm32/stm32f105vb"]
stm32f105vc = ["stm32f105", "embassy-stm32/stm32f105vc"]
stm32f107vb = ["stm32f107", "embassy-stm32/stm32f107vb"]
stm32f107vc = ["stm32f107", "embassy-stm32/stm32f107vc"]